# simple_local_server

./: Cargo.toml  PKGBUILD  README.md  licenserc.toml  sl-server.toml
src/: alacritty_theme_updater.rs  config.rs  error.rs  logger.rs  mailer.rs  main.rs  test_utils.rs  tieba_sign.rs  tracker_merger.rs  utils.rs
systemd-units/: sl-server.service
